# haskell_course

homeworks/course_project/calculator/: calculator.cabal
homeworks/course_project/calculator/.stack-work/install/x86_64-linux/lts-7.15/8.0.1/flag-cache/: HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  MissingH-1.4.0.1-EKn7kuoDq1aaX1Pfc3iyM  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  adjunctions-4.3-4Ce41VL5vJQ2GHDuvBYOaY  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  bifunctors-5.4.1-BPeqTGtW23n6LN2XFkdV  calculator-0.1.0.0  comonad-5-K67oBSM48Vd3lLCWoA5wEU  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  distributive-0.5.1-5St8fnipE6nCxzbgGHU2c  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  free-4.12.4-1ITnOV9d7sz5LQd0ol851m  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  hslogger-1.2.10-6Ih3VN3QBbAJ6pLH6h3KNu  kan-extensions-5.0.1-YMPsMkdoFrIOKXDGVJXnE  lens-4.14-JpTSnP1OzYyKpQqwE2EIrq  mtl-2.2.1-6qsR1PHUy5lL47Hpoa4jCM  network-2.6.3.1-G4Up1CPKbp7DeFsnywOnGG  old-locale-1.0.0.7-6glXNhHF891B41ZfuI8hU8  old-time-1.1.0.3-IcvdkJUsE9M8t3io8peAEp  parallel-3.2.1.0-6VcN0yUHtcs831TgbJiSSi  parsec-3.1.11-BCos4GEVCuDB8dnOCBHO6X  prelude-extras-0.4.0.3-FAyB4iuuM7cHXdrLMZtdXq  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  profunctors-5.2-Ltg66QzYP4ABnjg0OCT67L  random-1.1-54KmMHXjttlERYcr1mvsAe  reflection-2.1.2-J1ZzlxijzaHGRixYxgxlf9  regex-base-0.93.2-4lnOy3Rb1yfISFVEXVfJuH  regex-compat-0.95.1-JPDhOGKcrkD8S1t3VsLLUt  regex-posix-0.95.2-Fy6xYMm8dnjHHt23b8RdmR  semigroupoids-5.1-8D9MOHoStth3k6tqgg3LJf  (+9 more)
homeworks/course_project/calculator/src/: ExpressionEvaluator.hs  Main.hs  ShuntingYarn.hs
lectures/: lecture4.hs  (+9 more)
(+16 files in other folders)
