name:                calculator
version:             0.1.0.0
synopsis:            Aarithmetic expression calculator using the RPN method
description:         Please see README.md
homepage:            missing
license:             BSD3
license-file:        LICENSE
author:              Filip Saina
maintainer:          filip.saina@gmail.com
copyright:           2017 Filip Saina
category:            Haskell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable calculator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       MissingH
